--- a/Hotel-Booking-Web-App.html
+++ b/Hotel-Booking-Web-App.html
@@ -30,8 +30,8 @@
                 <br> Check - In Date <input class="checkin" type="date">
                 <br> Check-Out Date <input class="checkout" type="date">
                 <br><button class="sendbtn" onclick="totalnights()">SEND</button>
-                <br><input type="text" class="nights" placeholder="Nights">
-                <input type="text" class="amount" placeholder="Amount">
+                <br><input type="text" class="nights" readonly placeholder="Nights Booked">
+                <input type="text" class="amount" readonly placeholder="Total Amount">
                 <br><button class="cancelbtn" onclick="cancel()">CANCEL RESERVATION</button>
                 <br><button class="closebtn" onclick="closing()"><img src="Img/close.png"></button>
             </div>
@@ -47,8 +47,8 @@
                 <br> Check - In Date <input class="checkin" type="date">
                 <br> Check-Out Date <input class="checkout" type="date">
                 <br><button class="sendbtn" onclick="totalnights()">SEND</button>
-                <br><input type="text" class="nights" placeholder="Nights">
-                <input type="text" class="amount" placeholder="Amount">
+                <br><input type="text" class="nights" readonly placeholder="Nights Booked">
+                <input type="text" class="amount" readonly placeholder="Total Amount">
                 <br><button class="cancelbtn" onclick="cancel()">CANCEL RESERVATION</button>
                 <br><button class="closebtn" onclick="closing()"><img src="Img/close.png"></button>
             </div>
@@ -65,8 +65,8 @@
                 <br> Check - In Date <input class="checkin" type="date">
                 <br> Check-Out Date <input class="checkout" type="date">
                 <br><button class="sendbtn" onclick="totalnights()">SEND</button>
-                <br><input type="text" class="nights" placeholder="Nights">
-                <input type="text" class="amount" placeholder="Amount">
+                <br><input type="text" class="nights" readonly placeholder="Nights Booked">
+                <input type="text" class="amount" readonly placeholder="Total Amount">
                 <br><button class="cancelbtn" onclick="cancel()">CANCEL RESERVATION</button>
                 <br><button class="closebtn" onclick="closing()"><img src="Img/close.png"></button>
             </div>
