--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="warning">THIS WEBSITE IS FOR MOBILE DEVICES ONLY</div>
     <div class="logo">
         <img src="Img/EL.png">
         <div class="line"> Book A Reservation
